--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 <header class="header">
     <div class="container">
         <div class="header__wrapper">
-            <!--        Блок логотипа-->
             <a href="#" class="logo">
                 <img src="upload/logo.png" class="logo__img" alt="logo">
             </a>
-            <!--        Блок навигации-->
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
@@ -35,7 +33,6 @@
                     </li>
                 </ul>
             </nav>
-            <!--        Блок авторизации-->
             <div class="auth">
                 <a href="" class="auth__login">Login</a>
                 <a href="" class="auth__signup">Sing Up</a>
@@ -74,13 +71,12 @@
             </div>
         </div>
     </section>
-    <!--    Блок collection-->
     <section class="collection">
         <div class="container">
             <div class="collection__wrapper">
                 <div class="collection__info">
                     <h2 class="title collection__title">We have lots of plants collection for you and your family</h2>
-                    <a href="" class="collection__link">See all collection</a>
+                    <a href="" class="collection__link">See all collection &#8594;</a>
                 </div>
                 <div class="collection__gallery">
                     <img src="upload/gallery1.png" alt="" class="collection__image">
@@ -90,11 +86,16 @@
             </div>
         </div>
     </section>
-    <!--        Блок about-->
     <section class="about">
         <div class="container">
             <div class="about__wrapper">
+                <div class="about__image">
+                    <div class="about__back">
+                        <img src="upload/about-us.png" alt="">
+                    </div>
+                </div>
                 <div class="about__info">
+                    <p class="about__header">About Us</p>
                     <h2 class="title about__title">
                         Continue to Develop to Became Global Company
                     </h2>
@@ -114,18 +115,12 @@
                         Read More
                     </button>
                 </div>
-                <div class="about__image">
-                    <div class="about__back">
-                        <img src="upload/todd-trapani-aVVAI7z0WoY-unsplash%201.png" alt="">
-                    </div>
-                </div>
             </div>
         </div>
     </section>
-    <!--        Блок product-->
     <section class="product">
         <div class="container">
-            <h2 class="title">Our Best Product</h2>
+            <h2 class="title product__title">Our Best Product</h2>
             <div class="product__filter">
                 <a href="" class="product__category product__category-active">New Plants</a>
                 <a href="" class="product__category">New Arrivals</a>
@@ -133,25 +128,25 @@
             </div>
             <div class="product__catalog">
                 <div class="product__item">
-                    <img src="upload/nagy-arnold-X_IvVDuHvDQ-unsplash%20(1)%201.png" alt="" class="product__image">
+                    <img src="upload/outdoor.png" alt="" class="product__image">
                     <h2 class="product__name">Outdoor Plant</h2>
                     <div class="product__rating"></div>
                     <p class="product__price">$50.00</p>
                 </div>
                 <div class="product__item">
-                    <img src="upload/linh-le-Ebwp2-6BG8E-unsplash%201.png" alt="" class="product__image">
+                    <img src="upload/monstera.png" alt="" class="product__image">
                     <h2 class="product__name">Monstera Plant</h2>
                     <div class="product__rating"></div>
                     <p class="product__price">$50.00</p>
                 </div>
                 <div class="product__item">
-                    <img src="upload/pexels-kate-amos-2718447%20(1)%201.png" alt="" class="product__image">
+                    <img src="upload/pottel.png" alt="" class="product__image">
                     <h2 class="product__name">Pottel Plant</h2>
                     <div class="product__rating"></div>
                     <p class="product__price">$50.00</p>
                 </div>
                 <div class="product__item">
-                    <img src="upload/galina-n-miziNqvJx5M-unsplash%201.png" alt="" class="product__image">
+                    <img src="upload/indoor.png" alt="" class="product__image">
                     <h2 class="product__name">Indoor Plant</h2>
                     <div class="product__rating"></div>
                     <p class="product__price">$50.00</p>
@@ -162,7 +157,6 @@
             </button>
         </div>
     </section>
-    <!--        Блок opinion-->
     <section class="opinion">
         <div class="container">
             <h2 class="title opinion__title">What Our Customers Says</h2>
@@ -173,7 +167,7 @@
                 at.</p>
             <div class="opinion__review">
                 <div class="opinion__head">
-                    <img src="/upload/unsplash_v2aKnjMbP_k.png" alt="" class="opinion__image">
+                    <img src="/upload/person.png" alt="" class="opinion__image">
                     <div class="opinion__person person">
                         <h3 class="person__name">Hasanul Islam
                         </h3>
@@ -181,6 +175,7 @@
                             Marketing CEO
                         </p>
                     </div>
+                    <p class="opinion__quotes"> &#8220;</p>
                 </div>
                 <p class="text opinion__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu,
                     tempor,
@@ -194,7 +189,6 @@
             </div>
         </div>
     </section>
-    <!--            Блок form-->
     <section class="form">
         <div class="container">
             <div class="form__content">
@@ -210,7 +204,6 @@
             </div>
         </div>
     </section>
-    <!--        Блок follow-->
     <section class="follow">
         <div class="container">
             <h2 class="title follow__title">Follow Us on Instagram</h2>
@@ -219,31 +212,30 @@
                 cursus. Nec tristique at in erat lectus</p>
             <div class="follow__gallery">
                 <div class="follow__image">
-                    <img src="upload/Rectangle%2040.png" alt="">
+                    <img src="upload/follow1.png" alt="">
                 </div>
                 <div class="follow__image">
-                    <img src="upload/freddie-marriage-UcfKYTan-LU-unsplash%201.png" alt="">
+                    <img src="upload/follow2.png" alt="">
                 </div>
                 <div class="follow__image">
-                    <img src="upload/alis-po-IdVNRv-5wJo-unsplash%201.png" alt="">
+                    <img src="upload/follow3.png" alt="">
                 </div>
                 <div class="follow__image">
-                    <img src="upload/remi-muller-CZxraRv02-A-unsplash%201.png" alt="">
+                    <img src="upload/follow4.png" alt="">
                 </div>
                 <div class="follow__image">
-                    <img src="upload/stephanie-harvey-vHkj3fX9wCk-unsplash%201.png" alt="">
+                    <img src="upload/follow5.png" alt="">
                 </div>
             </div>
         </div>
     </section>
 </main>
-<!--Блок footer-->
 <footer class="footer">
     <div class="container">
         <div class="footer__wrapper">
             <div class="footer__info">
                 <a href="#" class="logo">
-                    <img src="" class="logo__img" alt="logo">
+                    <img src="upload/logo.png" class="logo__img" alt="logo">
                 </a>
                 <p class="text footer__text">Lorem ipsum dolor sit amet, consectetur adi piscing elit. Diam nibh posuere
                     duis
@@ -264,7 +256,6 @@
             </div>
             <div class="footer__navigation">
                 <h3 class="title footer__title">Navigation</h3>
-                <!--                Блок menu-->
                 <nav class="menu">
                     <ul>
                         <li class="menu__item">
