--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         dolor sit amet, consectetur adipiscing elit. Eu, tempor, accumsan sit amet nunc cursus. Nec
                         tristique at in erat lectus mas sa diam. Lectus elit, nulla elementum fringilla at.
                     </p>
-                    <p class="text about__text-main">
+                    <p class="text about__text about__text-main">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu, tempor, accumsan sit amet nunc
                         cursus.
                     </p>
